# APTRS

./: .all-contributorsrc  .dockerignore  .gitattributes  .gitignore  APTRS.postman_collection.json  CONTRIBUTING.md  Dockerfile  LICENSE  LICENSE.md  OpenAPI.yml  README.md  SECURITY.md  datadump.json  db.sqlite3  deploy.sh  docker-compose.yml  env.docker  install.bat  install.sh  manage.py  pyproject.toml  requirements.txt  run.bat  run.sh  sonar-project.properties
.do/: deploy.template.yaml
.github/: FUNDING.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml  codacy.yml  codeql.yml  contributors.yml  django.yml  docker-image.yml  docker-latest.yml  docker-release.yml  docker.yml  frontend.yml  ghcr-latest.yml  ghcr-release.yml  python-publish.yml  release.yml  semgrep.yml  snyk-infrastructure.yml  snyk-security.yml  static.yml
.semaphore/: semaphore.yml
APTRS/: .env  PGdata.json  db.sqlite3  env.example  settings.py  urls.py  wsgi.py
APTRS/APTRS/: __init__.py  asgi.py  celery.py  init.py  settings.py  urls.py  wsgi.py
APTRS/accounts/: admin.py  apps.py  authenticate.py  group_permissions_api.py  models.py  permissions.py  serializers.py  tasks.py  tests.py  throttles.py  token_utils.py  urls.py  views.py
APTRS/configapi/: apps.py  models.py  serializers.py  urls.py  views.py
APTRS/customers/: admin.py  dashboard.py  models.py  project_serializers.py  serializers.py  urls.py  views.py
APTRS/data/: cwe.json
APTRS/lib/: htmldocx.py
APTRS/project/: admin.py  apps.py  models.py  nessus.py  report.py  report2.docx  report3.docx  serializers.py  signals.py  tasks,py  tasks.py  tests.py  urls.py  views.py
APTRS/templates/: cover-page.html  executivesummary.html  report.docx  report.html  table-of-content.html  vulnerabilities-summary.html  vulnerabilities.html
APTRS/utils/: doc_style.py  email_notification.py  filters.py  group_permissions_api.py  image_handler.py  image_parsing.py  permissions.py  project_status.py  s3_utils.py  token.py  (+1 more)
Certificate/: selfsigned.crt  selfsigned.key
DB/: CustomPermission.json
Doc/: Company.md  Customer.md  Prerequisites.md  Project.md  README.md  Report-Template.md  Running.md  Setting.md  Vulnerability-Database.md  _sidebar.md  index.html  installation.md
Dummy-Data/: Permission.json  profile_data.json  project.json  vulnerability.json
accounts/: forms.py  serializers.py  urls.py  views.py
configapi/: models.py  views.py
customers/: admin.py  apps.py  serializers.py  urls.py  views.py
deploy/: postgres_dockerfile  redis_dockerfile
docker/: Dockerfile_API  Dockerfile_frontend
frontend/: README.md  env.example  index.html  package-lock.json  package.json  postcss.config.cjs  tailwind.config.cjs  tailwind.config.js  tsconfig.json  vite.config.js
project/: forms.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
scripts/: backend.sh  entrypoint.sh  nginx.conf  wkhtmltopdf.sh  worker.sh
templates/: Header.html
vulnerability/: apps.py  forms.py  serializers.py  urls.py  views.py
(+247 files in other folders)
